[project]
name = "progress-bar"
version = "0.1.0"
description = "A simple, high performance progress bar module written in cython"
authors = [
    { name = "jMujunen", email = "jMujunen@github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.0.12",
]
[project.scripts]
ProgressBar = "ProgressBar.ProgressBar:main"

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["*"]


